--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,83 +58,6 @@
     height: auto;
 }
 
-.dropdown {
-    float: left;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #002e5b;
-}
-
-.dropbtn .dropdown-content a:hover {
-    background-color: #002e5b;
-    color: #fde428;
-    transition: all 0.5s ease 0s;
-}
-
-.dropbtn .dropdown-content a:hover {
-    color: #fde428;
-    transition: all 0.5s ease 0s;
-}
-
-.dropdown-content a:hover {
-    color: #fde428;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown .dropbtn {
-    cursor: pointer;
-    border: none;
-    outline: none;
-    color: #002e5b;
-    font-size: 36px;
-    padding: 25px 20px;
-    display: inline-block;
-    transition: all 0.5s ease 0s;
-    background-color: inherit;
-}
-
-.dropbtn a {
-    color: #002e5b
-}
-
-.dropdown-content {
-    display: none;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: #002e5b;
-    font-size: 18px;
-    padding: 25px 20px;
-    display: inline-block;
-    transition: all 0.5s ease 0s;
-}
-
 * {
     text-decoration: none;
     list-style: none;
@@ -149,7 +72,7 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
-section {
+.section {
     max-width: 1200px;
     margin: 0px auto;
     display: table;
@@ -241,7 +164,7 @@ label {
 }
 
 @media only screen and (max-width: 1440px) {
-    section {
+    .section {
         max-width: 95%;
     }
 }
@@ -250,28 +173,23 @@ label {
     header {
         padding: 20px 0px;
     }
-
     input[type=checkbox] {
         position: absolute;
         background: none;
         top: -9999px;
         left: -9999px;
     }
-
     input[type=checkbox]:focus {
         background: none;
     }
-
     label {
         padding: 8px 0px;
         display: inline-block;
         cursor: pointer;
     }
-
     input[type=checkbox]:checked~nav {
         display: block;
     }
-
     nav {
         display: none;
         position: absolute;
@@ -280,18 +198,15 @@ label {
         padding: 0px;
         z-index: 99;
     }
-
     nav ul {
         width: auto;
     }
-
     nav ul li {
         float: none;
         padding: 0px;
         width: 100%;
         display: table;
     }
-
     nav ul li a {
         color: #FFF;
         font-size: 15px;
@@ -299,11 +214,9 @@ label {
         display: block;
         border-bottom: 1px solid rgba(225, 225, 225, 0.1);
     }
-
     .dropdown .dropbtn {
         font-size: 15px;
     }
-
     nav ul li a i {
         color: #fde428;
         padding-right: 13px;
@@ -311,14 +224,12 @@ label {
 }
 
 @media only screen and (max-width: 480px) {
-    section {
+    .section {
         max-width: 90%;
     }
-
     #myName {
         font-size: 50px
     }
-
     .Text-Left {
         text-align: center;
     }
@@ -328,11 +239,9 @@ label {
     label {
         padding: 5px 0px;
     }
-
     nav {
         top: 47px;
     }
-
     .Text-Left {
         text-align: center;
     }
@@ -348,7 +257,7 @@ label {
     margin-left: -15px;
 }
 
-span {
+.AboutSpan {
     font-size: 150px;
     font-weight: 700;
 }
@@ -361,7 +270,45 @@ span {
     margin-bottom: 90px;
     display: grid;
     grid-template-columns: max-content 1fr;
+}
 
+.chart {
+    font: 13px/1.3 "Lucida Grande", sans-serif;
+    display: table;
+    table-layout: fixed;
+    width: 60%;
+    max-width: 1500px;
+    height: 500px;
+    margin: 0 auto;
+    background-image: linear-gradient(bottom, rgba(0, 0, 0, 0.1) 2%, transparent 2%);
+    background-size: 100% 50px;
+    background-position: left top;
+}
+
+.chart .chartLength {
+    position: relative;
+    display: table-cell;
+    vertical-align: bottom;
+    height: 200px;
+}
+
+.chart .graph {
+    margin: 0 1em;
+    display: block;
+    background: rgba(209, 236, 250, 0.75);
+    animation: draw 1s ease-in-out;
+}
+
+.chart .graph:before {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    padding: 5px 1em 0;
+    display: block;
+    text-align: center;
+    content: attr(title);
+    word-wrap: break-word;
 }
 
 .background-container {
@@ -382,6 +329,7 @@ span {
 }
 
 .Text {
+    font-family: 'Courier New', Courier, monospace;
     margin-top: 95px;
     font-size: 24pt;
     text-align: center;
@@ -470,7 +418,8 @@ body {
     width: 200px;
     height: 200px;
     margin: 50px auto 0;
-    position: relative;
+    position: sticky;
+    top: 0px;
     transition: 200ms ease-in-out;
 }
 
@@ -502,7 +451,7 @@ body {
     padding: 0;
     width: 30%;
     height: 30%;
-    background: #f846bb;
+    background: #fde428;
     position: absolute;
     transition: 200ms ease-in-out;
 }
@@ -550,7 +499,7 @@ body {
 }
 
 #footer:hover ul li {
-    border: solid 3px #ed8899;
+    border: solid 3px #fde428;
     transform: rotate(-45deg);
 }
 
@@ -637,8 +586,64 @@ body {
     width: 50%;
 }
 
-#test {
-    width: 50%;
+.aboutMe {
+    width: 100%;
     height: auto;
+}
 
+#photos {
+    box-sizing: border-box;
+    margin: 0;
+    font-family: Arial;
+    background: #fffde1;
+}
+
+.header {
+    text-align: center;
+    padding: 32px;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+
+/* Create four equal columns that sits next to each other */
+
+.column {
+    width: 100%;
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+}
+
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+
+@media (max-width: 800px) {
+    .column {
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+
+@media (max-width: 600px) {
+    .column {
+        flex: 100%;
+        max-width: 100%;
+    }
+}
+
+#Fireworks {
+    cursor: crosshair;
 }
